skip-keys google-mock

--- a/install
+++ b/install
@@ -164,7 +164,7 @@ do_install()
     fi
 
     # Package dependencies.
-    rosdep install --from-paths . --ignore-src --rosdistro ${ROS_DISTRO} -y --as-root pip:no
+    rosdep install --skip-keys google-mock --from-paths . --ignore-src --rosdistro ${ROS_DISTRO} -y --as-root pip:no
   popd
 
   # Clean out or create the install directory.
