--- a/install
+++ b/install
@@ -163,6 +163,9 @@ do_install()
       curl https://raw.githubusercontent.com/mbreyer/image_pipeline/4bf67d3c861cb157e8174f67250680263b18d2b7/image_publisher/CMakeLists.txt > image_pipeline/image_publisher/CMakeLists.txt
     fi
 
+    # See: https://github.com/ros/geometry2/pull/279
+    curl https://raw.githubusercontent.com/racko/geometry2/0173a538f89c66e2783dc67ee3609660625e16b4/tf2/src/buffer_core.cpp > geometry2/tf2/src/buffer_core.cpp
+      
     # Package dependencies.
     rosdep install --skip-keys google-mock --from-paths . --ignore-src --rosdistro ${ROS_DISTRO} -y --as-root pip:no
   popd
